--- a/themes/hugo-theme-learn/layouts/shortcodes/expand.html
+++ b/themes/hugo-theme-learn/layouts/shortcodes/expand.html
@@ -1,17 +1,15 @@
-{{ $_hugo_config := `{ "version": 1 }` }}
-<div class="expand">
-    <div class="expand-label" style="cursor: pointer;" onclick="$h = $(this);$h.next('div').slideToggle(100,function () {$h.children('i').attr('class',function () {return $h.next('div').is(':visible') ? 'fas fa-chevron-down' : 'fas fa-chevron-right';});});">
-        <i style="font-size:x-small;" class="fas fa-chevron-right"></i>
-        <span>
-        {{$expandMessage := T "Expand-title"}}
-    	{{ if .IsNamedParams }}
-    	{{.Get "default" | default $expandMessage}}
-    	{{else}}
-    	{{.Get 0 | default $expandMessage}}
-    	{{end}}
-    	</span>
-    </div>
-    <div class="expand-content" style="display: none;">
-        {{.Inner | safeHTML}}
-    </div>
-</div>
+{{- $_hugo_config := `{ "version": 1 }` }}
+{{- $version := split hugo.Version "." }}
+{{- $major := int (index $version 0) }}
+{{- $minor := int (index $version 1) }}
+{{- $id := "" }}
+{{- if or (and (eq $major 0) (ge $minor 108)) (gt $major 0) }}
+  {{- $id = "" }}
+{{- end }}
+{{- partial "shortcodes/expand.html" (dict
+  "page"    .Page
+  "content" .Inner
+  "open"    (.Get "open" | default (.Get 1))
+  "title"   (.Get "title" | default (.Get 0))
+  "id"      $id
+) }}
